tutorials/SIGGRAPH2015_CPBP_code/Control/Apps/UnityODE/UnityOde.h



// Define our own types for SWIG. This is needed because arrays (such as dQuaternion) can't be returned from functions
typedef dReal * OdeQuaternion;

typedef const dReal * ConstOdeQuaternion;

typedef const dReal * ConstOdeVector;


void EXPORT_API odeFixUnityRotation(int geomId);


void EXPORT_API odeSetContactSoftCFM(float cfm);


void EXPORT_API odeSetFrictionCoefficient(float mu);


// Body: Creating and Destroying Bodies

int  EXPORT_API odeBodyCreate();

void EXPORT_API odeBodyDestroy(int bodyId);


// Body: Position and orientation

void EXPORT_API odeBodySetPosition(int bodyId, float x, float y, float z);

//bool EXPORT_API odeBodySetRotation(int bodyId, vmml::mat3f *m);
bool EXPORT_API odeBodySetQuaternion(int bodyId, ConstOdeQuaternion q, bool breakOnErrors);

void EXPORT_API odeBodySetLinearVel(int bodyId, float x, float y, float z);

void EXPORT_API odeBodySetAngularVel(int bodyId, float x, float y, float z);


EXPORT_API ConstOdeVector odeBodyGetPosition(int bodyId);

//bool EXPORT_API odeBodyGetRotation(int bodyId, vmml::mat3f *m);
EXPORT_API ConstOdeQuaternion odeBodyGetQuaternion(int bodyId);

EXPORT_API ConstOdeVector odeBodyGetLinearVel(int bodyId);

EXPORT_API ConstOdeVector odeBodyGetAngularVel(int bodyId);


// Body: Mass and force

// TODO: expose dMass struct
void EXPORT_API odeBodySetMass(int bodyId, float mass);

float EXPORT_API odeBodyGetMass(int bodyId);


EXPORT_API void odeBodyAddForce(int bodyId, ConstOdeVector f);

EXPORT_API void odeBodyAddTorque(int bodyId, ConstOdeVector f);

EXPORT_API void odeBodyAddRelForce(int bodyId, ConstOdeVector f);

EXPORT_API void odeBodyAddRelTorque(int bodyId, ConstOdeVector f);

EXPORT_API void odeBodyAddForceAtPos(int bodyId, ConstOdeVector f, ConstOdeVector p);

EXPORT_API void odeBodyAddForceAtRelPos(int bodyId, ConstOdeVector f, ConstOdeVector p);

EXPORT_API void odeBodyAddRelForceAtPos(int bodyId, ConstOdeVector f, ConstOdeVector p);

EXPORT_API void odeBodyAddRelForceAtRelPos(int bodyId, ConstOdeVector f, ConstOdeVector p);


EXPORT_API void odeBodySetForce(int bodyId, ConstOdeVector f);

EXPORT_API void odeBodySetTorque(int bodyId, ConstOdeVector f);

EXPORT_API ConstOdeVector odeBodyGetForce(int bodyId);

EXPORT_API ConstOdeVector odeBodyGetTorque(int bodyId);


// Body: Kinematic State

bool EXPORT_API odeBodySetDynamic(int bodyId);

bool EXPORT_API odeBodySetKinematic(int bodyId);

bool EXPORT_API odeBodyIsKinematic(int bodyId);


// Body: Utility


// Geom: General geom functions

EXPORT_API void odeGeomDestroy(int geomId);


bool EXPORT_API odeGeomSetBody(int geomId, int bodyId);

int EXPORT_API odeGeomGetBody(int geomId);


void EXPORT_API odeGeomSetPosition(int geomId, float x, float y, float z);

//void dGeomSetRotation (dGeomID, const dMatrix3 R);
void EXPORT_API odeGeomSetQuaternion(int geomId, ConstOdeQuaternion q);


EXPORT_API ConstOdeVector odeGeomGetPosition(int geomId);

//const dReal * dGeomGetRotation (dGeomID);
EXPORT_API void odeGeomGetQuaternion(int geomId, OdeQuaternion result);


void EXPORT_API odeGeomSetOffsetWorldPosition(int geomId, float x, float y, float z);


EXPORT_API void odeGeomSetCategoryBits (int geomId, unsigned long bits);

EXPORT_API void odeGeomSetCollideBits (int geomId, unsigned long bits);

EXPORT_API unsigned long odeGeomGetCategoryBits (int geomId);

EXPORT_API unsigned long odeGeomGetCollideBits (int geomId);


// Geometry classes

// Geom: Sphere class
EXPORT_API int odeCreateSphere(float radius);

EXPORT_API void odeGeomSphereSetRadius(int geomId, float radius);

EXPORT_API float odeGeomSphereGetRadius(int geomId);

EXPORT_API float dGeomSpherePointDepth(int geomId, float x, float y, float z);


// Geom: Box class

EXPORT_API int odeCreateBox(float lx, float ly, float lz);

EXPORT_API void odeGeomBoxSetLengths(int geomId, float lx, float ly, float lz);

EXPORT_API void odeGeomBoxGetLengths(int geomId, float &lx, float &ly, float &lz);

EXPORT_API float dGeomBoxPointDepth(int geomId, float x, float y, float z);


// Geom: Plane class

int   EXPORT_API odeCreatePlane(int spaceId, float a, float b, float c, float d);

void  EXPORT_API odeGeomPlaneSetParams(int geomId, float a, float b, float c, float d);

//OdeVec4 EXPORT_API odeGeomPlaneGetParams(int geomId);
float EXPORT_API odeGeomPlanePointDepth(int geomId, float x, float y, float z);


// Geom: Heightfield class
int   EXPORT_API odeCreateHeightfield(const float *heightData, float width, float depth, int widthSamples, int depthSamples, float scale, float offset, float thickness, int wrap);


// Geom: Capsule class

int   EXPORT_API odeCreateCapsule(int spaceId, float radius, float length);

void  EXPORT_API odeGeomCapsuleSetParams(int geomId, float radius, float length);

void  EXPORT_API odeGeomCapsuleGetParams(int geomId, float &radius, float &length);

float EXPORT_API odeGeomCapsulePointDepth(int geomId, float x, float y, float z);




///////////////////////////////////////////////////////////////////////////////
// Joints
///////////////////////////////////////////////////////////////////////////////

// Joint: Creating and Destroying Joints

int EXPORT_API odeJointCreateBall();

int EXPORT_API odeJointCreateHinge();

int EXPORT_API odeJointCreateSlider();

//dJointID dJointCreateContact (dWorldID, dJointGroupID, const dContact *);
int EXPORT_API odeJointCreateUniversal();

int EXPORT_API odeJointCreateHinge2();

int EXPORT_API odeJointCreatePR();

int EXPORT_API odeJointCreatePU();

int EXPORT_API odeJointCreatePiston();

int EXPORT_API odeJointCreateFixed();

int EXPORT_API odeJointCreateAMotor();

int EXPORT_API odeJointCreateLMotor();

int EXPORT_API odeJointCreatePlane2D();


// Joint: Miscellaneous Joint Functions

void EXPORT_API odeJointAttach(int jointId, int bodyId1, int bodyId2);

int EXPORT_API odeJointGetType(int jointId);

int EXPORT_API odeJointGetBody(int jointId, int index);


// Joint: Joint parameter setting functions

// Joint: Ball and Socket parameters

void EXPORT_API odeJointSetBallAnchor(int jointId, float x, float y, float z);

void EXPORT_API odeJointGetBallAnchor(int jointId, float &x, float &y, float &z);

void EXPORT_API odeJointGetBallAnchor2(int jointId, float &x, float &y, float &z);


// Joint: Hinge parameters

void  EXPORT_API odeJointSetHingeAnchor(int jointId, float x, float y, float z);

void  EXPORT_API odeJointSetHingeAxis(int jointId, float x, float y, float z);

void EXPORT_API odeJointGetHingeAnchor(int jointId, float &x, float &y, float &z);