tutorials/SIGGRAPH2015_CPBP_code/Control/Apps/Unity/MinimalUnityExample/Assets/Scripts/UnityOde/UnityOdePINVOKE.cs


  [DllImport("UnityOde", EntryPoint="CSharp_odeFixUnityRotation")]
  public static extern void odeFixUnityRotation(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeSetContactSoftCFM")]
  public static extern void odeSetContactSoftCFM(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeSetFrictionCoefficient")]
  public static extern void odeSetFrictionCoefficient(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyCreate")]
  public static extern int odeBodyCreate();

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyDestroy")]
  public static extern void odeBodyDestroy(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetPosition")]
  public static extern void odeBodySetPosition(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetQuaternion")]
  public static extern bool odeBodySetQuaternion(int jarg1, /* imtype */ IntPtr jarg2, bool jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetLinearVel")]
  public static extern void odeBodySetLinearVel(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetAngularVel")]
  public static extern void odeBodySetAngularVel(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetPosition")]
  public static extern /* imtype out */ IntPtr odeBodyGetPosition(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetQuaternion")]
  public static extern /* imtype out */ IntPtr odeBodyGetQuaternion(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetLinearVel")]
  public static extern /* imtype out */ IntPtr odeBodyGetLinearVel(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetAngularVel")]
  public static extern /* imtype out */ IntPtr odeBodyGetAngularVel(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetMass")]
  public static extern void odeBodySetMass(int jarg1, float jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetMass")]
  public static extern float odeBodyGetMass(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddForce")]
  public static extern void odeBodyAddForce(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddTorque")]
  public static extern void odeBodyAddTorque(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddRelForce")]
  public static extern void odeBodyAddRelForce(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddRelTorque")]
  public static extern void odeBodyAddRelTorque(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddForceAtPos")]
  public static extern void odeBodyAddForceAtPos(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddForceAtRelPos")]
  public static extern void odeBodyAddForceAtRelPos(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddRelForceAtPos")]
  public static extern void odeBodyAddRelForceAtPos(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyAddRelForceAtRelPos")]
  public static extern void odeBodyAddRelForceAtRelPos(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetForce")]
  public static extern void odeBodySetForce(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetTorque")]
  public static extern void odeBodySetTorque(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetForce")]
  public static extern /* imtype out */ IntPtr odeBodyGetForce(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyGetTorque")]
  public static extern /* imtype out */ IntPtr odeBodyGetTorque(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetDynamic")]
  public static extern bool odeBodySetDynamic(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodySetKinematic")]
  public static extern bool odeBodySetKinematic(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeBodyIsKinematic")]
  public static extern bool odeBodyIsKinematic(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomDestroy")]
  public static extern void odeGeomDestroy(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetBody")]
  public static extern bool odeGeomSetBody(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomGetBody")]
  public static extern int odeGeomGetBody(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetPosition")]
  public static extern void odeGeomSetPosition(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetQuaternion")]
  public static extern void odeGeomSetQuaternion(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomGetPosition")]
  public static extern /* imtype out */ IntPtr odeGeomGetPosition(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomGetQuaternion")]
  public static extern void odeGeomGetQuaternion(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetOffsetWorldPosition")]
  public static extern void odeGeomSetOffsetWorldPosition(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetCategoryBits")]
  public static extern void odeGeomSetCategoryBits(int jarg1, uint jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSetCollideBits")]
  public static extern void odeGeomSetCollideBits(int jarg1, uint jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomGetCategoryBits")]
  public static extern uint odeGeomGetCategoryBits(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomGetCollideBits")]
  public static extern uint odeGeomGetCollideBits(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeCreateSphere")]
  public static extern int odeCreateSphere(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSphereSetRadius")]
  public static extern void odeGeomSphereSetRadius(int jarg1, float jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomSphereGetRadius")]
  public static extern float odeGeomSphereGetRadius(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_dGeomSpherePointDepth")]
  public static extern float dGeomSpherePointDepth(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeCreateBox")]
  public static extern int odeCreateBox(float jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomBoxSetLengths")]
  public static extern void odeGeomBoxSetLengths(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomBoxGetLengths")]
  public static extern void odeGeomBoxGetLengths(int jarg1, out float jarg2, out float jarg3, out float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_dGeomBoxPointDepth")]
  public static extern float dGeomBoxPointDepth(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeCreatePlane")]
  public static extern int odeCreatePlane(int jarg1, float jarg2, float jarg3, float jarg4, float jarg5);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomPlaneSetParams")]
  public static extern void odeGeomPlaneSetParams(int jarg1, float jarg2, float jarg3, float jarg4, float jarg5);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomPlanePointDepth")]
  public static extern float odeGeomPlanePointDepth(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeCreateHeightfield")]
  public static extern int odeCreateHeightfield(HandleRef jarg1, float jarg2, float jarg3, int jarg4, int jarg5, float jarg6, float jarg7, float jarg8, int jarg9);

  [DllImport("UnityOde", EntryPoint="CSharp_odeCreateCapsule")]
  public static extern int odeCreateCapsule(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomCapsuleSetParams")]
  public static extern void odeGeomCapsuleSetParams(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomCapsuleGetParams")]
  public static extern void odeGeomCapsuleGetParams(int jarg1, out float jarg2, out float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGeomCapsulePointDepth")]
  public static extern float odeGeomCapsulePointDepth(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateBall")]
  public static extern int odeJointCreateBall();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateHinge")]
  public static extern int odeJointCreateHinge();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateSlider")]
  public static extern int odeJointCreateSlider();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateUniversal")]
  public static extern int odeJointCreateUniversal();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateHinge2")]
  public static extern int odeJointCreateHinge2();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreatePR")]
  public static extern int odeJointCreatePR();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreatePU")]
  public static extern int odeJointCreatePU();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreatePiston")]
  public static extern int odeJointCreatePiston();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateFixed")]
  public static extern int odeJointCreateFixed();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateAMotor")]
  public static extern int odeJointCreateAMotor();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreateLMotor")]
  public static extern int odeJointCreateLMotor();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointCreatePlane2D")]
  public static extern int odeJointCreatePlane2D();

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAttach")]
  public static extern void odeJointAttach(int jarg1, int jarg2, int jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetType")]
  public static extern int odeJointGetType(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetBody")]
  public static extern int odeJointGetBody(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetBallAnchor")]
  public static extern void odeJointSetBallAnchor(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetBallAnchor")]
  public static extern void odeJointGetBallAnchor(int jarg1, out float jarg2, out float jarg3, out float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetBallAnchor2")]
  public static extern void odeJointGetBallAnchor2(int jarg1, out float jarg2, out float jarg3, out float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetHingeAnchor")]
  public static extern void odeJointSetHingeAnchor(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetHingeAxis")]
  public static extern void odeJointSetHingeAxis(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAnchor")]
  public static extern void odeJointGetHingeAnchor(int jarg1, out float jarg2, out float jarg3, out float jarg4);
